<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/teacher_level_overlay"
    android:layout_width="match_parent"
    android:background="@color/light_yellow"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/codingbasics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_style_pink"
                android:fontFamily="@font/porkh"
                android:text="@string/coding_basics"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/learn_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_style_pink"
                android:fontFamily="@font/porkh"
                android:text="@string/logic"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/learn_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/datastructures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_style_pink"
                android:fontFamily="@font/porkh"
                android:text="@string/data_structures"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/learn_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/systems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_style_pink"
                android:fontFamily="@font/porkh"
                android:text="@string/systems"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/learn_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/machinelearning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_style_pink"
                android:fontFamily="@font/porkh"
                android:text="@string/machine_learning"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/learn_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/databases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_style_pink"
                android:fontFamily="@font/porkh"
                android:text="@string/databases"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/learn_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Security"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_style_pink"
                android:fontFamily="@font/porkh"
                android:text="@string/security"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/learn_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Software"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_style_pink"
                android:fontFamily="@font/porkh"
                android:text="@string/software_development"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/learn_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Networks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginBottom="20dp"
                android:background="@drawable/button_style_pink"
                android:fontFamily="@font/porkh"
                android:text="@string/networks"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/learn_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/algorithms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginBottom="20dp"
                android:background="@drawable/button_style_pink"
                android:fontFamily="@font/porkh"
                android:text="@string/algorithms"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/learn_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/datavisualization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginBottom="20dp"
                android:background="@drawable/button_style_pink"
                android:fontFamily="@font/porkh"
                android:text="@string/data_visualization"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/learn_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/teacherimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/teacher" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/teacherpopup" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/porkh"
            android:text="@string/teaching_level"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/beginnerbuttonteach"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="113dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_style_pink"
            android:text="@string/beginner"
            app:layout_constraintBottom_toTopOf="@+id/intermediatebuttonteach"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/intermediatebuttonteach"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_style_pink"
            android:text="@string/intermediate"
            app:layout_constraintBottom_toTopOf="@+id/advancedbuttonteach"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/advancedbuttonteach"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_style_pink"
            android:text="@string/advanced"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>