<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="429dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pink_blob" />

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/white"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/signupbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/signupbutton"
            android:layout_width="238dp"
            android:layout_height="53dp"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/light_pink"
            android:text="@string/Login"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/Mascots"
        android:layout_width="355dp"
        android:layout_height="219dp"
        android:layout_marginTop="86dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoText"
        app:srcCompat="@drawable/mainpage" />


    <TextView
        android:id="@+id/LogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/welearn"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>